--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,72 +1,154 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@article{young2021amr,
+  title={Predictors for concurrent detection of antimicrobial resistance genes of public health importance in livestock and humans in an informal urban community in Nepal},
+  author={Young CCW and Karmacharya D and M Bista and AN Sharma and T Goldstein and J Mazet and CK Johnson},
+  journal={Scientific Reports, submitted},
+  year={2021},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@article{young2021amr2,
+  title={Antimicrobial resistance gene co-occurrence in humans, animals, and the environment in a community context: the importance of One Health in antimicrobial resistance surveillance},
+  author={CCW Young, and D Karmacharya, and M Bista, and AN Sharma, and T Goldstein, and J Mazet, and CK Johnson},
+  journal={EcoHealth, submitted},
+  year={2021},
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
+@article{young2016optimizing,
+  title={Optimizing viral discovery in bats},
+  author={CCW Young and KJ Olival},
+  journal={PloS one},
+  volume={11},
+  number={2},
+  pages={e0149237},
+  year={2016},
+  publisher={Public Library of Science San Francisco, CA USA}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
+@article{johnson2020global,
+  title={Global shifts in mammalian population trends reveal key predictors of virus spillover risk},
+  author={CK Johnson, and PL Hitchens, and PS Pandit, and J Rushmore, and TS Evans, and CCW Young, and M Doyle},
+  journal={Proceedings of the Royal Society B},
+  volume={287},
+  number={1924},
+  pages={20192736},
+  year={2020},
+  publisher={The Royal Society}
+}
+
+@article{young2019sharing,
+  title={Sharing of antimicrobial resistance genes among animals, humans, and the environment in Nepal: A one health case study},
+  author={CCW Young, and Kharmacharya, D and Bista, M and Sharma, A and Goldstein, T and Anthony, SJ and Smith, W and Mazet, J and Johnson, CK},
+  journal={International Journal of Infectious Diseases},
+  volume={79},
+  pages={20},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{pandit2018predicting,
+  title={Predicting wildlife reservoirs and global vulnerability to zoonotic Flaviviruses},
+  author={Pandit, PS and Doyle, MM and Smart, KM and Young, CCW and Drape, GW and Johnson, CK},
+  journal={Nature communications},
+  volume={9},
+  number={1},
+  pages={1--10},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
+
+@article{lang2013serum,
+  title={Serum albumin and short-term risk for mortality and cardiovascular disease among HIV-infected veterans},
+  author={Lang, Joshua and Scherzer, Rebecca and Weekley, Cristin C and Tien, Phyllis C and Grunfeld, Carl and Shlipak, Michael G},
+  journal={AIDS (London, England)},
+  volume={27},
   number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+  pages={1339},
+  year={2013},
+  publisher={NIH Public Access}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{weekley2008grant,
+  title={Grant Proposal: Prevalence of American Trypanosomiasis in Northern Peru in Correlation with Infected Vector Abundance},
+  author={Weekley, CC and Kronen, MR},
+  year={2008}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{shlipak2011comparison,
+  title={Comparison of cardiovascular prognosis by 3 serum cystatin C methods in the Heart and Soul Study},
+  author={Shlipak, MG and Weekley, CC and Li, Y and Hansson, LO and Larsson, A and Whooley, M},
+  journal={Clinical chemistry},
+  volume={57},
+  number={5},
+  pages={737--745},
+  year={2011},
+  publisher={Oxford University Press}
+}
+
+@article{weekley2012advances,
+  title={Advances in the Use of Multi-Marker Panels for Renal Risk Stratification},
+  author={Weekley, CC and Peralta, CA},
+  journal={Current opinion in nephrology and hypertension},
+  volume={21},
+  number={3},
+  pages={301},
+  year={2012},
+  publisher={NIH Public Access}
+}
+
+@article{choi2011association,
+  title={Association of educational attainment with chronic disease and mortality: the Kidney Early Evaluation Program (KEEP)},
+  author={Choi, AI and Weekley, CC and Chen, SC and Li, S and Tamura, MK and Norris, KC and Shlipak, MG},
+  journal={American Journal of Kidney Diseases},
+  volume={58},
+  number={2},
+  pages={228--234},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{peralta2013occult,
+  title={Occult chronic kidney disease among persons with hypertension in the United States: data from the National Health and Nutrition Surveys 1988--1994 and 1999--2002},
+  author={Peralta, CA and Weekley, CC and Li, Y and Shlipak, MG},
+  journal={Journal of hypertension},
+  volume={31},
+  number={6},
+  pages={1196},
+  year={2013},
+  publisher={NIH Public Access}
+}
+
+@phdthesis{young2019antimicrobial,
+  title={Antimicrobial Resistance from a One Health Perspective in Nepal},
+  author={Young, CCW},
+  year={2019},
+  school={University of California, Davis}
+}
+
+@article{olival2015bats,
+  title={Are bats really “special” as viral reservoirs? What we know and need to know},
+  author={Olival, KJ and Weekley, CC and Daszak, P},
+  journal={Bats and viruses},
+  pages={281--294},
+  year={2015},
+  publisher={John Wiley \& Sons, Inc Hoboken, NJ}
+}
+
+@article{choi2011cardiovascular,
+  title={Cardiovascular risks associated with abacavir and tenofovir exposure in HIV-infected persons},
+  author={Choi, AI and Vittinghoff, E and Deeks, SG and Weekley, CC and Li, Y and Shlipak, MG},
+  journal={AIDS (London, England)},
+  volume={25},
+  number={10},
+  pages={1289},
+  year={2011},
+  publisher={NIH Public Access}
+}
+
+@article{weekley2013malaria,
+  title={Malaria: the clinical basics},
+  author={Weekley, CC and Smith, DS},
+  journal={Global Health Education Consortium (GHEC)},
+  year={2013}
 }
